[package]
name = "belajar-rust"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["Matheus Valentino <matheusvalentino2@gmail.com>"]
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
color-eyre = "0.6.3"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
